--- a/01-dmeta-install-arteva/roles/config-hostname/tasks/config-hostname.yml
+++ b/01-dmeta-install-arteva/roles/config-hostname/tasks/config-hostname.yml
@@ -3,9 +3,9 @@
 - name: set a hostname
   become: true
   community.builtin.hostname:
-    name: {{ hostname }}
+    name: "{{ hostname }}"
   register: values
 
 - name: display hostname
   debug:
-    msg: {{ values.stdout }}
+    msg: "{{ values.stdout }}"
