--- a/02-dmeta-os-arteva/roles/config-kernel-args/tasks/main.yml
+++ b/02-dmeta-os-arteva/roles/config-kernel-args/tasks/main.yml
@@ -11,3 +11,6 @@
 
 - import_tasks: extend-backlog-limit.yml
   tags: [ 'never', 'extend-backlog-limit', 'config-kernel-args', 'config-security']
+
+- import_tasks: enable-page-table-isolation.yml
+  tags: [ 'never', 'enable-page-table-isolation', 'config-kernel-args', 'config-security']
