--- a/02-dmeta-os-arteva/roles/config-password-attempts/tasks/main.yml
+++ b/02-dmeta-os-arteva/roles/config-password-attempts/tasks/main.yml
@@ -23,3 +23,6 @@
 
 - import_tasks: rollback-auth-file.yml
   tags: [ 'never', 'rollback-auth-file']
+
+- import_tasks: rollback-auth-template.yml
+  tags: [ 'never', 'rollback-auth-template']
