--- a/02-dmeta-os-arteva/roles/config-kernel-param/tasks/config-icmp-error-ipv4.yml
+++ b/02-dmeta-os-arteva/roles/config-kernel-param/tasks/config-icmp-error-ipv4.yml
@@ -1,51 +1,50 @@
 ---
 
-- name: List /etc/sysctl.d/*.conf files
-  find:
-    paths:
-    - /etc/sysctl.d/
-    - /run/sysctl.d/
-    - /usr/local/lib/sysctl.d/
-    contains: ^[\s]*net.ipv4.icmp_ignore_bogus_error_responses.*$
-    patterns: '*.conf'
-    file_type: any
-  register: find_sysctl_d
-  tags:
-  - NIST-800-171-3.1.20
-  - NIST-800-53-CM-7(a)
-  - NIST-800-53-CM-7(b)
-  - NIST-800-53-SC-5
-  - PCI-DSS-Req-1.4.3
-  - PCI-DSSv4-1.4
-  - PCI-DSSv4-1.4.2
-  - disable_strategy
-  - low_complexity
-  - medium_disruption
-  - reboot_required
-  - sysctl_net_ipv4_icmp_ignore_bogus_error_responses
-  - unknown_severity
-
-- name: Comment out any occurrences of net.ipv4.icmp_ignore_bogus_error_responses from config files
-  replace:
-    path: '{{ item.path }}'
-    regexp: ^[\s]*net.ipv4.icmp_ignore_bogus_error_responses
-    replace: '#net.ipv4.icmp_ignore_bogus_error_responses'
-  loop: '{{ find_sysctl_d.files }}'
-  when: '"kernel" in ansible_facts.packages'
-  tags:
-  - NIST-800-171-3.1.20
-  - NIST-800-53-CM-7(a)
-  - NIST-800-53-CM-7(b)
-  - NIST-800-53-SC-5
-  - PCI-DSS-Req-1.4.3
-  - PCI-DSSv4-1.4
-  - PCI-DSSv4-1.4.2
-  - disable_strategy
-  - low_complexity
-  - medium_disruption
-  - reboot_required
-  - sysctl_net_ipv4_icmp_ignore_bogus_error_responses
-  - unknown_severity
+#- name: List /etc/sysctl.d/*.conf files
+#  find:
+#    paths:
+#    - /etc/sysctl.d/
+#    - /run/sysctl.d/
+#    - /usr/local/lib/sysctl.d/
+#    contains: ^[\s]*net.ipv4.icmp_ignore_bogus_error_responses.*$
+#    patterns: '*.conf'
+#    file_type: any
+#  register: find_sysctl_d
+#  tags:
+#  - NIST-800-171-3.1.20
+#  - NIST-800-53-CM-7(a)
+#  - NIST-800-53-CM-7(b)
+#  - NIST-800-53-SC-5
+#  - PCI-DSS-Req-1.4.3
+#  - PCI-DSSv4-1.4
+#  - PCI-DSSv4-1.4.2
+#  - disable_strategy
+#  - low_complexity
+#  - medium_disruption
+#  - reboot_required
+#  - sysctl_net_ipv4_icmp_ignore_bogus_error_responses
+#  - unknown_severity
+#
+#- name: Comment out any occurrences of net.ipv4.icmp_ignore_bogus_error_responses from config files
+#  replace:
+#    path: '{{ item.path }}'
+#    regexp: ^[\s]*net.ipv4.icmp_ignore_bogus_error_responses
+#    replace: '#net.ipv4.icmp_ignore_bogus_error_responses'
+#  loop: '{{ find_sysctl_d.files }}'
+#  tags:
+#  - NIST-800-171-3.1.20
+#  - NIST-800-53-CM-7(a)
+#  - NIST-800-53-CM-7(b)
+#  - NIST-800-53-SC-5
+#  - PCI-DSS-Req-1.4.3
+#  - PCI-DSSv4-1.4
+#  - PCI-DSSv4-1.4.2
+#  - disable_strategy
+#  - low_complexity
+#  - medium_disruption
+#  - reboot_required
+#  - sysctl_net_ipv4_icmp_ignore_bogus_error_responses
+#  - unknown_severity
 
 - name: Ensure sysctl net.ipv4.icmp_ignore_bogus_error_responses is set
   sysctl:
