--- a/02-dmeta-os-arteva/roles/config-kernel-param/tasks/disable-network-bpf-syscall.yml
+++ b/02-dmeta-os-arteva/roles/config-kernel-param/tasks/disable-network-bpf-syscall.yml
@@ -1,42 +1,42 @@
 ---
 
-- name: List /etc/sysctl.d/*.conf files
-  find:
-    paths:
-    - /etc/sysctl.d/
-    - /run/sysctl.d/
-    - /usr/local/lib/sysctl.d/
-    contains: ^[\s]*kernel.unprivileged_bpf_disabled.*$
-    patterns: '*.conf'
-    file_type: any
-  register: find_sysctl_d
-  tags:
-  - DISA-STIG-RHEL-08-040281
-  - NIST-800-53-AC-6
-  - NIST-800-53-SC-7(10)
-  - disable_strategy
-  - low_complexity
-  - medium_disruption
-  - medium_severity
-  - reboot_required
-  - sysctl_kernel_unprivileged_bpf_disabled
-
-- name: Comment out any occurrences of kernel.unprivileged_bpf_disabled from config files
-  replace:
-    path: '{{ item.path }}'
-    regexp: ^[\s]*kernel.unprivileged_bpf_disabled
-    replace: '#kernel.unprivileged_bpf_disabled'
-  loop: '{{ find_sysctl_d.files }}'
-  tags:
-  - DISA-STIG-RHEL-08-040281
-  - NIST-800-53-AC-6
-  - NIST-800-53-SC-7(10)
-  - disable_strategy
-  - low_complexity
-  - medium_disruption
-  - medium_severity
-  - reboot_required
-  - sysctl_kernel_unprivileged_bpf_disabled
+#- name: List /etc/sysctl.d/*.conf files
+#  find:
+#    paths:
+#    - /etc/sysctl.d/
+#    - /run/sysctl.d/
+#    - /usr/local/lib/sysctl.d/
+#    contains: ^[\s]*kernel.unprivileged_bpf_disabled.*$
+#    patterns: '*.conf'
+#    file_type: any
+#  register: find_sysctl_d
+#  tags:
+#  - DISA-STIG-RHEL-08-040281
+#  - NIST-800-53-AC-6
+#  - NIST-800-53-SC-7(10)
+#  - disable_strategy
+#  - low_complexity
+#  - medium_disruption
+#  - medium_severity
+#  - reboot_required
+#  - sysctl_kernel_unprivileged_bpf_disabled
+#
+#- name: Comment out any occurrences of kernel.unprivileged_bpf_disabled from config files
+#  replace:
+#    path: '{{ item.path }}'
+#    regexp: ^[\s]*kernel.unprivileged_bpf_disabled
+#    replace: '#kernel.unprivileged_bpf_disabled'
+#  loop: '{{ find_sysctl_d.files }}'
+#  tags:
+#  - DISA-STIG-RHEL-08-040281
+#  - NIST-800-53-AC-6
+#  - NIST-800-53-SC-7(10)
+#  - disable_strategy
+#  - low_complexity
+#  - medium_disruption
+#  - medium_severity
+#  - reboot_required
+#  - sysctl_kernel_unprivileged_bpf_disabled
 
 - name: Ensure sysctl kernel.unprivileged_bpf_disabled is set to 1
   sysctl:
