--- a/02-dmeta-os-arteva/roles/config-session-login/tasks/config-bash-umask.yml
+++ b/02-dmeta-os-arteva/roles/config-session-login/tasks/config-bash-umask.yml
@@ -1,31 +1,30 @@
 ---
 
-- name: Check if umask in /etc/bashrc is already set
-  ansible.builtin.lineinfile:
-    path: /etc/bashrc
-    regexp: ^[^#]*\bumask\s+\d+$
-    state: absent
-  check_mode: true
-  changed_when: false
-  register: umask_replace
-  tags:
-  - DISA-STIG-RHEL-08-020353
-  - NIST-800-53-AC-6(1)
-  - NIST-800-53-CM-6(a)
-  - accounts_umask_etc_bashrc
-  - low_complexity
-  - low_disruption
-  - medium_severity
-  - no_reboot_needed
-  - restrict_strategy
+#- name: Check if umask in /etc/bashrc is already set
+#  ansible.builtin.lineinfile:
+#    path: /etc/bashrc
+#    regexp: ^[^#]*\bumask\s+\d+$
+#    state: absent
+#  check_mode: true
+#  changed_when: false
+#  register: umask_replace
+#  tags:
+#  - DISA-STIG-RHEL-08-020353
+#  - NIST-800-53-AC-6(1)
+#  - NIST-800-53-CM-6(a)
+#  - accounts_umask_etc_bashrc
+#  - low_complexity
+#  - low_disruption
+#  - medium_severity
+#  - no_reboot_needed
+#  - restrict_strategy
 
 - name: Replace user umask in /etc/bashrc
   ansible.builtin.replace:
     path: /etc/bashrc
     regexp: ^([^#]*\b)umask\s+\d+$
     replace: \g<1>umask {{ var_accounts_user_umask }}
-  when:
-  - umask_replace.found > 0
+  register:  umask_replace
   tags:
   - DISA-STIG-RHEL-08-020353
   - NIST-800-53-AC-6(1)
@@ -43,7 +42,8 @@
     path: /etc/bashrc
     line: umask {{ var_accounts_user_umask }}
   when:
-  - umask_replace.found == 0
+  - umask_replace is not changed
+  - var_accounts_user_umask != "022"
   tags:
   - DISA-STIG-RHEL-08-020353
   - NIST-800-53-AC-6(1)
