--- a/02-dmeta-os-arteva/roles/config-ssh/tasks/force-frequent-session.yml
+++ b/02-dmeta-os-arteva/roles/config-ssh/tasks/force-frequent-session.yml
@@ -1,17 +1,5 @@
 ---
 
-- name: XCCDF Value var_rekey_limit_size # promote to variable
-  set_fact:
-    var_rekey_limit_size: !!str 1G
-  tags:
-    - always
-
-- name: XCCDF Value var_rekey_limit_time # promote to variable
-  set_fact:
-    var_rekey_limit_time: !!str 1h
-  tags:
-    - always
-
 - name: Force frequent session key renegotiation
   block:
 
@@ -38,7 +26,7 @@
       path: /etc/ssh/sshd_config
       create: true
       regexp: (?i)(?i)^\s*RekeyLimit\s+
-      line: RekeyLimit {{ var_rekey_limit_size }} {{ var_rekey_limit_time }}
+      line: RekeyLimit {{ var_ssh_client_rekey_limit_size }} {{ var_ssh_client_rekey_limit_time }}
       state: present
       insertbefore: BOF
       validate: /usr/sbin/sshd -t -f %s
